Updated using Colab

--- a/python-tools/python_for_QM08.ipynb
+++ b/python-tools/python_for_QM08.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/wbandabarragan/quantum-mechanics-1/blob/main/python-resources/python_for_QM07.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/wbandabarragan/quantum-mechanics-1/blob/main/python-tools/python_for_QM08.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -17,7 +17,7 @@
         "id": "db574934"
       },
       "source": [
-        "# Tutorial 7: Python for Quantum Mechanics\n",
+        "# Tutorial 8: Python for Quantum Mechanics\n",
         "\n",
         "## Exercise: solving eigenvalue problems\n",
         "\n",
@@ -89,6 +89,7 @@
         "hamiltonian_matrix = np.array([[2., 1., 0.], [1., 2., 0.], [0., 0., 3.]])\n",
         "\n",
         "print(hamiltonian_matrix)\n",
+        "print(\"\\n\")\n",
         "print(hamiltonian_matrix.shape)"
       ],
       "metadata": {
@@ -96,10 +97,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kce1xFpCFBKX",
-        "outputId": "a8360f8f-88fa-4e92-dd37-1cd2c5f19d79"
+        "outputId": "c3c53e4f-9515-4d37-b2f9-1298b2e9741b"
       },
       "id": "kce1xFpCFBKX",
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,6 +109,8 @@
             "[[2. 1. 0.]\n",
             " [1. 2. 0.]\n",
             " [0. 0. 3.]]\n",
+            "\n",
+            "\n",
             "(3, 3)\n"
           ]
         }
@@ -129,10 +132,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zgNK-BW7Fwet",
-        "outputId": "996b4174-784a-43ed-99ed-c92cf04fffe1"
+        "outputId": "980d293e-c14b-4e7b-fca4-7eb2ead2ba5d"
       },
       "id": "zgNK-BW7Fwet",
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,10 +175,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cdb54uttH18r",
-        "outputId": "94a737fb-433c-4059-fd08-d4f61577ee32"
+        "outputId": "af21ae14-d25c-4118-dda1-346307401ffc"
       },
       "id": "Cdb54uttH18r",
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +199,7 @@
         "psi = np.array([1.j/np.sqrt(3.), -1.j/np.sqrt(3.), 1.j/np.sqrt(3.)])\n",
         "\n",
         "print(psi)\n",
-        "\n",
+        "print(\"\\n\")\n",
         "print(\"Norm of psi: \", np.linalg.norm(psi))"
       ],
       "metadata": {
@@ -204,16 +207,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "21kvI_krHLt8",
-        "outputId": "9d2d277e-7905-4d16-d706-b02e674764cf"
+        "outputId": "45240b7c-0302-4b5f-9469-bc7d95e712cf"
       },
       "id": "21kvI_krHLt8",
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[ 0.+0.57735027j -0.-0.57735027j  0.+0.57735027j]\n",
+            "\n",
+            "\n",
             "Norm of psi:  1.0\n"
           ]
         }
@@ -232,7 +237,7 @@
         "id": "5ial_9V9HLx_"
       },
       "id": "5ial_9V9HLx_",
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -251,10 +256,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xPQStxy6HL1n",
-        "outputId": "7fff9673-dff6-441d-8325-72a4678c5e33"
+        "outputId": "0f24d04d-0da7-437e-8d05-ce7f3e60fa7b"
       },
       "id": "xPQStxy6HL1n",
-      "execution_count": 18,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,10 +290,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "enL2_2TbJ9kV",
-        "outputId": "bd024c8e-cfdb-4fef-af1f-844144629256"
+        "outputId": "eb99b47d-03eb-4eae-f9d3-e27ab22b5ef2"
       },
       "id": "enL2_2TbJ9kV",
-      "execution_count": 20,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,10 +332,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vwyrgVBgKXFW",
-        "outputId": "845981da-c143-49e6-bcbf-a6a59fa0e618"
+        "outputId": "52f07a82-a1d2-4e36-b411-26feef2ed1ed"
       },
       "id": "vwyrgVBgKXFW",
-      "execution_count": 22,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,10 +370,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oSWNY1aEK41p",
-        "outputId": "927f2ce2-5b24-437c-f995-7db89fc06143"
+        "outputId": "c6af7b67-8088-4fab-9f2f-c1011a8dd47e"
       },
       "id": "oSWNY1aEK41p",
-      "execution_count": 23,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,10 +408,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l-7lBOhQLJdH",
-        "outputId": "2740453b-fa35-4c42-b35e-6f3eb983a2a2"
+        "outputId": "08ee0b6e-85af-4b8f-ff52-131b16e4f6cc"
       },
       "id": "l-7lBOhQLJdH",
-      "execution_count": 24,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -424,7 +429,7 @@
         "id": "jOD7LdaNLWtD"
       },
       "id": "jOD7LdaNLWtD",
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     }
   ],
